syntax = "proto3";

package person.v1;

message Lead {
	string personId = 1;
	string name = 2;
	string email = 3;
	string cellphone = 4;
}

message CreateLeadRequest {
	Lead lead = 1;
}

message CreateLeadResponse {
	string personId = 1;
}

message VerifyLeadRequest {
	string personId = 1;
	string code = 2;
}

message VerifyLeadResponse {
	boolean success = 1;
}

service PersonService {
	rpc CreateLead (CreateLeadRequest) returns (CreateLeadResponse);
	rpc VerifyLead (VerifyLeadRequest) returns (VerifyLeadResponse);
}